# MSLoRA_CR

./: .gitignore  README.md  pyproject.toml
llava/: conversation.py  mm_utils.py  utils.py
llava/eval/: eval_mslora_cr.py  report_results.py
llava/eval/eval_metrics/: evaluate_metrics.py  utils.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_mistral.py
llava/model/multimodal_encoder/: clip_encoder.py
llava/mslora_utils/: __init__.py  lora_utils.py  mslora.py
llava/train/: arguments.py  data.py  train.py  trainer.py
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/CXP/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/HAM/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/PCAM/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/derm/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/iu-x-ray/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/nmi/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/pathvqa/: answer-file.jsonl  hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO-64-64_llava_med_v1.5/slake-vqarad/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO_6TASK-64-64_llava_med_v1.5/CXP/: answer-file.jsonl  hit.csv  metrics.txt  not_hit.csv
results/finetune_lora_MSLoRA-CR-ORTHO_6TASK-64-64_llava_med_v1.5/PCAM/: answer-file.jsonl  (+3 more)
scripts/: eval_lora_each.sh  eval_mslora_cr_ortho.sh  eval_mslora_cr_ortho_6task.sh  finetune_lora_each.sh  finetune_mslora_cr_ortho.sh  finetune_mslora_cr_ortho_6task.sh  report_all_metrics.sh  report_metrics.sh
scripts/base/: port_generator.sh
scripts/eval/: main.sh
scripts/finetune/: main_each.sh
(+42 files in other folders)
